turtleart.disktwo.DiskTwo.scala.error
Compilation error:
DiskTwo:5: error: too many arguments for method getCouleur: ()java.awt.Color
  getCouleur(Color.black)
            ^DiskTwo:6: error: type mismatch;
 found   : Double
 required: Int
  for(k<-0 to angle){
              ^