turtleart.disktwo.DiskTwo.scala.code
override def run() {
  var angle=0.0
  angle=360/18
  for(k<- 1 to 9){
  getCouleur(Color.black)
  for(k<-0 to angle){
    avance(100)
    recule(100)
    droite(1)
  }
  }
}